Fixed lowest resolution button alignment on creation table view and displaying online status of browsing user.

--- a/public/css/table.css
+++ b/public/css/table.css
@@ -76,9 +76,9 @@
 
 
     .create-button{
-        margin-top:140px;
+        margin-top:120px;
         width:140px;
-        margin-left:100px;
+        margin-left:55px;
         margin-right:auto;
         border: 3px dotted red;
         border-radius: 10px;
@@ -255,9 +255,8 @@
         border-radius: 10px
     }
 
-
     .create-button{
-        margin-top:140px;
+        margin-top:180px;
         width:140px;
         margin-left:100px;
         margin-right:auto;
@@ -265,8 +264,6 @@
         border-radius: 10px;
         font-size:20px;
     }
-
-
 
     #game-log{
         padding:5px 10px 5px 10px;
